# rs_bc_microservices_project

./: Cargo.toml  Dockerfile-auth  Dockerfile-health  README.md  build.rs  docker-compose.yml
.github/workflows/: prod.yml
proto/: authentication.proto
src/auth-service/: auth.rs  main.rs  sessions.rs  users.rs
src/client/: main.rs
src/health-check-service/: main.rs
