[package]
name = "microservices-project"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "auth"
path = "src/auth-service/main.rs"

[[bin]]
name = "client"
path = "src/client/main.rs"

[[bin]]
name = "health-check"
path = "src/health-check-service/main.rs"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
pbkdf2 = { version = "0.12.2", features = ["simple"] }
prost = "0.13.3"
rand_core = { version = "0.6.4", features = ["std"] }
tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread", "time"] }
tonic = "0.12.3"
uuid = { version = "1.11.0", features = ["v4"] }

[build-dependencies]
tonic-build = "0.12.3"
